--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -75,6 +75,14 @@ jobs:
           echo "matrix=$matrix" >> $GITHUB_OUTPUT
 
   build:
+    name: ios native libraries
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checout@main
+      - name: build for ios
+        run: make ios-arm64
+
+  build:
     name: Build native libraries
     runs-on: ubuntu-latest
     needs: [check, matrix]
