--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -74,7 +74,7 @@ jobs:
           echo $matrix | jq .
           echo "matrix=$matrix" >> $GITHUB_OUTPUT
 
-  build:
+  ios-build:
     name: ios native libraries
     runs-on: macos-latest
     steps:
