--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -77,10 +77,15 @@ jobs:
   ios-build:
     name: ios native libraries
     runs-on: macos-latest
+    needs: [check, matrix]
+    strategy:
+      matrix: ${{fromJson(needs.matrix.outputs.matrix)}}
     steps:
       - uses: actions/checkout@main
       - name: build for ios
         run: make ios-arm64
+        env:
+          OCI_EXE: docker
 
   build:
     name: Build native libraries
