--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -84,9 +84,9 @@ jobs:
       - uses: actions/checkout@main
       - name: build for ios
         run: |
-          perl -i -pe 'print "SQLITE_PRIVATE int RegisterExtensionFunctions(sqlite3*);\n" if $. == 100' target/sqlite-3.50.2-iOS-arm64/sqlite3.c
           make native OS_NAME=iOS OS_ARCH=arm64 \
-          CC="clang -arch arm64 -miphoneos-version-min=12.0 -isysroot $(xcrun --sdk iphoneos --show-sdk-path)"
+          CC="clang -arch arm64 -miphoneos-version-min=12.0 -isysroot $(xcrun --sdk iphoneos --show-sdk-path)" \
+          perl -i -pe 'print "SQLITE_PRIVATE int RegisterExtensionFunctions(sqlite3*);\n" if $. == 100' target/sqlite-3.50.2-iOS-arm64/sqlite3.c
 
   build:
     name: Build native libraries
